Hexagon overflowing and other some issues fixed

--- a/css/style.css
+++ b/css/style.css
@@ -121,6 +121,7 @@ body {
   align-items: center;
   font-size: 1.5rem;
   height: 100%;
+  font-family:Panton Black Caps;
   /* margin-top:7%; */
   /* color: white; */
 }
@@ -165,7 +166,7 @@ body {
   background: white;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  /*align-items: center; */
   font-size: 1.5rem;
   /* height: 140vh; */
 }
@@ -180,7 +181,7 @@ body {
 .highlights h1 {
   /* padding: 20px; */
   padding-top: 80px;
-  font-family: Poppins;
+  font-family: Panton Black Caps;
 }
 
 .container {
@@ -204,6 +205,7 @@ body {
   align-items: center;
   text-align: center;
   font-size: 20px;
+  font-family: Panton Black Caps;
   font-weight: 600;
   width: 350px;
   height: 75px;
@@ -214,6 +216,7 @@ body {
   background: linear-gradient(to right, #36d1dc, #5b86e5);
   box-shadow: 0 4px 5px rgba(0, 0, 0, 0.3);
   background: url("../assets/bg2.png") fixed center center;
+  
 }
 
 .cards {
@@ -222,6 +225,7 @@ body {
   justify-content: space-evenly;
   margin-top: 40px;
   max-width: 100%;
+  font-family: Panton Black Caps;
 }
 
 .card {
@@ -274,12 +278,15 @@ body {
   flex-wrap: wrap;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
+  /*align-items: center;*/
   font-size: 1.5rem;
+  width:100%;
+  height:100%;
+}
 }
 
 .themes-section h1 {
-  font-family: Poppins;
+  font-family: Panton Black Caps;
   margin-bottom: 40px;
 }
 
@@ -291,15 +298,16 @@ body {
 }
 
 .theme-card {
-  width: 300px; 
+  width: 23%; 
+  height:100%;
  /* min-width: 250px; */
   height: 300px;
-  margin: 10px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   text-align: center;
+  font-family: Panton Black Caps;
   border-radius: 2%;
   border: 1.5px lightgray solid;
   background-color: #eeeeee;
@@ -340,6 +348,7 @@ body {
   /* height: 80vh; */
   /* width: 80%; */
   background-color: white;
+  font-family: Panton Black Caps;
 }
 .section-1 {
   width: 50%;
@@ -541,6 +550,7 @@ body {
 .faq-section {
   display: flex;
   justify-content: center;
+  font-family: Panton Black Caps;
 }
 
 .faq-section-section {
@@ -798,7 +808,7 @@ td:last-child {
 }
 
 /* Bob */
-@-webkit-keyframes hvr-bob {
+/*@-webkit-keyframes hvr-bob {
   0% {
     -webkit-transform: translateY(-16px);
     transform: translateY(-16px);
@@ -839,7 +849,7 @@ td:last-child {
   }
 }
 .hvr-bob {
-  /* display: inline-block; */
+  /* display: inline-block; 
   vertical-align: middle;
   -webkit-transform: perspective(1px) translateZ(0);
   transform: perspective(1px) translateZ(0);
@@ -860,4 +870,4 @@ td:last-child {
   animation-fill-mode: forwards;
   -webkit-animation-direction: normal, alternate;
   animation-direction: normal, alternate;
-}
+}*/
